# game-distance2-coloring

./: .gitignore  README.md  pyproject.toml  run_cli.py
.github/workflows/: deploy-pages.yml
scripts/: export_web_cases.py
src/game_coloring/: __init__.py  cli.py  graphs.py  solver.py
tests/: test_paths.py  test_web_export.py
web/: app.js  index.html  styles.css
